--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,17 @@
 [package]
 name = "rbxcloud"
 version = "0.1.0"
-edition = "2021"
+description = "CLI for the Roblox Open Cloud APIs"
 authors = ["Stephen Leitnick"]
+license = "MIT"
+repository = "https://github.com/Sleitnick/rbx-cloud-cli"
+readme = "README.md"
+edition = "2021"
 
 [dependencies]
 anyhow = "1.0.58"
 clap = { version = "3.2.14", features = ["derive"] }
+env_logger = "0.9.0"
 log = "0.4.17"
 reqwest = { version = "0.11.11", features = ["json"] }
 serde = { version = "1.0.140", features = ["derive"] }
