--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.58"
+base64 = "0.13.0"
 clap = { version = "3.2.14", features = ["derive"] }
 env_logger = "0.9.0"
 log = "0.4.17"
+md-5 = "0.10.1"
 reqwest = { version = "0.11.11", features = ["json"] }
 serde = { version = "1.0.140", features = ["derive"] }
 serde_json = "1.0.82"
