--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -100,7 +100,7 @@ jobs:
           asset_name: ${{ env.BIN }}-${{ env.PROJECT_VERSION }}-${{ matrix.label }}.zip
           asset_content_type: application/octet-stream
 
-      - name: Upload Archie to Artifacts
+      - name: Upload Archive to Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: ${{ env.BIN }}-${{ env.PROJECT_VERSION }}-${{ matrix.label }}.zip
