--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -105,3 +105,9 @@ jobs:
         with:
           name: ${{ env.BIN }}-${{ env.PROJECT_VERSION }}-${{ matrix.label }}.zip
           path: release.zip
+
+      - name: Publish
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        shell: bash
+        run: cargo publish
