--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -106,8 +106,18 @@ jobs:
           name: ${{ env.BIN }}-${{ env.PROJECT_VERSION }}-${{ matrix.label }}.zip
           path: release.zip
 
+  publish:
+    needs: ["build"]
+    name: Publish
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+
       - name: Publish
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
         shell: bash
         run: cargo publish
+
