--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -109,6 +109,7 @@ jobs:
   publish:
     needs: ["build"]
     name: Publish
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
