feat: confirm tag is equal to cargo version

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,6 +11,18 @@ jobs:
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
+
+      - name: Get version from cargo.toml
+        uses: SebRollen/toml-action@v1.0.0
+        id: cargo_version
+        with:
+          file: 'cargo.toml'
+          field: 'package.version'
+
+      - name: Verify package version is equal to tag version
+        if: "!contains(steps.read_toml.outputs.value, github.ref"
+        run: exit 1
+        
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
