--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ jobs:
           field: 'package.version'
 
       - name: Verify package version is equal to tag version
-        if: "!contains("v" + steps.read_toml.outputs.value, github.ref"
+        if: "!contains(steps.read_toml.outputs.value, github.ref"
         run: exit 1
 
       - name: Create Release
