--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,7 +20,7 @@ jobs:
           field: 'package.version'
 
       - name: Verify package version is equal to tag version
-        if: "!contains(steps.read_toml.outputs.value, github.ref"
+        if: "!contains(steps.read_toml.outputs.value, github.ref)"
         run: exit 1
 
       - name: Create Release
