--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,9 @@ jobs:
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
+      - name: Checkout codebase
+        uses: actions/checkout@v3
+
       - name: Get version from cargo.toml
         uses: SebRollen/toml-action@v1.0.0
         id: cargo_version
