remove debug info

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,11 +24,7 @@ jobs:
 
       - name: Verify package version is equal to tag version
         if: ${{ "v" + steps.cargo_version.outputs.value != github.ref}}
-        run: | 
-        echo ${{ steps.cargo_version.outputs.value }}
-        echo ${{ github.ref }}
-        echo "Cargo version did not match tag version! Termianting..."
-        exit 1
+        run: "exit 1"
 
       - name: Create Release
         id: create_release
