--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rbxcloud"
-version = "0.1.0-alpha.10"
-description = "CLI for the Roblox Open Cloud APIs"
+version = "0.2.0"
+description = "CLI and SDK for the Roblox Open Cloud APIs"
 authors = ["Stephen Leitnick"]
 license = "MIT"
 repository = "https://github.com/Sleitnick/rbxcloud"
