testing: trying out new idea

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Get the tag of current release
         id: get_version
-        run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+        run: echo ::set-output name=VERSION::$(echo $GITHUB_REF#refs/tags/v)
 
       - name: Verify package version is equal to tag version
         if: ${{ format('v{0}', steps.cargo_version.outputs.value) != steps.get_version.outputs.VERSION }}
