--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.58"
 base64 = "0.13.0"
-clap = { version = "3.2.14", features = ["derive"] }
+clap = { version = "3.2.14", features = ["derive", "env"] }
 md-5 = "0.10.1"
 reqwest = { version = "0.11.11", features = ["json"] }
 serde = { version = "1.0.140", features = ["derive"] }
