--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,7 +30,7 @@ jobs:
       matrix:
         include:
           - host: linux
-            os: ubuntu-18.04
+            os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             label: linux
 
