--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,30 +11,12 @@ jobs:
     name: Lint and Format
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: nightly
-          components: clippy, rustfmt
-          override: true
-      - name: Format
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: --all -- --check
-      - name: Clippy
-        uses: actions-rs/clippy-check@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features
-
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+      - uses: actions/checkout@v4
+      - name: Rust
+        run: rustup toolchain install stable --profile minimal --component clippy rustfmt --no-self-update
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2
+      - run: cargo check
+      - run: cargo fmt --all -- --check
+      - run: cargo clippy --all-features
       - run: cargo test --all-features
