--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,15 +7,18 @@ on:
   pull_request:
 
 jobs:
-  lint:
-    name: Lint and Format
+  ci:
+    name: CI
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
       - name: Rust
         run: rustup toolchain install stable --profile minimal --component clippy rustfmt --no-self-update
+      
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2
+
       - run: cargo check
       - run: cargo fmt --all -- --check
       - run: cargo clippy --all-features
