--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -112,10 +112,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+      - name: Rust
+        run: rustup toolchain install stable --profile minimal --no-self-update
 
       - name: Publish
         env:
