--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ anyhow = "1.0.81"
 base64 = "0.22.0"
 clap = { version = "4.5.4", features = ["derive", "env"] }
 md-5 = "0.10.6"
-reqwest = { version = "0.12.2", features = ["json", "multipart"] }
+reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tls", "http2", "json", "multipart"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 tokio = { version = "1.36.0", features = ["full"] }
