--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,6 +16,7 @@ nav:
     - Group: cli/cli-group.md
     - Subscription: cli/cli-subscription.md
     - Notification: cli/cli-notification.md
+    - Universe: cli/cli-universe.md
   - Rust Lib:
     - Install: lib/lib-install.md
 
