--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,7 +18,7 @@ jobs:
           python-version: "3.x"
 
       - name: Check tag version against cargo version
-        run: python check_version.py ${{ github.ref_name }}
+        run: python scripts/check_version.py ${{ github.ref_name }}
 
   build:
     needs: ["check-release-version"]
@@ -88,7 +88,7 @@ jobs:
       - name: Upload Archive to Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.BIN }}-${{ env.PROJECT_VERSION }}-${{ matrix.label }}.zip
+          name: ${{ env.BIN }}-${{ env.PROJECT_VERSION }}-${{ matrix.label }}
           path: release.zip
 
   create-release:
@@ -106,12 +106,16 @@ jobs:
         with:
           path: gh_artifacts
 
+      - name: Move releases
+        run: python -u scripts/move_releases.py gh_artifacts
+
       - name: Create release
         id: create_release
         uses: softprops/action-gh-release@v2
         with:
           draft: true
           generate_release_notes: true
+          fail_on_unmatched_files: true
           files: gh_artifacts/*.zip
 
   publish:
