--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Rust
-        run: rustup toolchain install stable --profile minimal --component clippy rustfmt --no-self-update
+        run: rustup toolchain install stable --profile minimal --component clippy,rustfmt --no-self-update
       
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2
