--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ reqwest = { version = "0.12.2", default-features = false, features = ["rustls-tl
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 tokio = { version = "1.36.0", features = ["full"] }
+chrono = { version = "0.4.38", features = ["serde"] }
+rand = "0.9.0"
