--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,7 @@ nav:
     - Subscription: cli/cli-subscription.md
     - Universe: cli/cli-universe.md
     - User: cli/cli-user.md
+    - User Restriction: cli/cli-user-restriction.md
   - Rust Lib:
     - Install: lib/lib-install.md
 
